# birth

./: .gitignore  README.md  hello.c  test_shell.sh
3des/: 3des.h  http.h  out
algorithm/: arrayNth.cpp  palindrome.cpp
algorithm/3des/: 3des.c  http.c  main.c
algorithm/base64/: Makefile  base64.c  base64.h  bash64.c  main.c
algorithm/hash/: Makefile  hash_code.c  hash_code.h  main.c
algorithm/math/: Makefile  fac.c  fac.h  main.c
autoconf-make/: out
bruce_ffmpeg/: Makefile  config.h
compile_test/: func_test.c  macro.c  out  sys_func_test.c
compile_test/cmake/linux/src/: CMakeLists.txt
compile_test/cmake/linux/src/helloLib/: CMakeLists.txt
compile_test/cmake/windows/vs2017_test/: CMakeLists.txt
compile_test/cmake/windows/vs2017_test/src/: CMakeLists.txt  function.cpp  function.h
construct/: tsk_common.h  tsk_config.h  tsk_debug.c  tsk_debug.h  tsk_log.c  tsk_memory.c  tsk_mutex.h  tsk_object.c  tsk_time.c
dns/: dns
fileSystem/: build.sh
file_module/: build.sh
file_system/: a.out  build.sh  main.c  test
libavformat/: avformat.h  avio.c  avio.h  file.c  file.h  httpauth.c  internal.h  protocol.h  protocol_list.c  rtsp.c  rtsp.h
libavutils/: avstring.c  avstring.h  base64.h  common.h  dict.h  error.c  error.h  log.h  opt.c  opt.h  rational.h  time.c
log/: log.c  log.h
log-system/: log.c  log.h  main.c
log_module/: debug_log.h
log_system/: build_static.sh  log.c  log.h
macro-linux/: out
network/: applicatioin.h  application.c  common.h  dns_cache.c  dns_cache.h  http.c  http.h  network.c  network.h  os_support.c  tcp.c  tcp.h  test_shell.sh  url.c  url.h  url2ip.c  utils.c
network_system/: getaddrinfo.c
protocol/: README.md  http_download.c  main.c
shell_test/: build_android.sh  opt_para.sh  redirect.sh  wildcard.sh
subtitle/: http.c  main.c  subtitle  typedef.h
test_func/: test_scanf.c
test_goto/: main.c  out
video-and-audio/: Makefile  audio_out.c  eric_voice.pcm
(+289 files in other folders)
