CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

add_subdirectory(helloLib)

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src main_src)
#file(GLOB CPP_FILES_IN_UTILS "${SRC_ROOT_PATH}/utils/*.cpp")

set(SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/main.c)

include_directories(${PROJECT_SOURCE_DIR}/src/helloLib)
LINK_DIRECTORIES("${PROJECT_BINARY_DIR}/lib")
ADD_EXECUTABLE(main ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(main libhello.a)