#
project(YouMeCommon)

cmake_minimum_required(VERSION 2.8)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../bin)

IF(WIN32) 
	if (WIN64_2017)
		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/WIN64_2017/${CMAKE_BUILD_TYPE})
		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/WIN64_2017/${CMAKE_BUILD_TYPE})
	endif(WIN64_2017)
	
	if (WIN32_2017)
		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/WIN32_2017/${CMAKE_BUILD_TYPE})
		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/WIN32_2017/${CMAKE_BUILD_TYPE})
	endif(WIN32_2017)

	ADD_DEFINITIONS(-DOS_WIN32)
ENDIF(WIN32)

add_subdirectory(src)







